add universal and debian installers